# chebfun

./: .gitmodules  CMakeLists.txt  LICENSE
doc/doxygen/: Doxyfile
doc/sphinx/: Makefile  conf.py  index.rst  make.bat
src/: chebfun.cpp  chebfun.h  chebfun_module.cpp  common.h
test/: CMakeLists.txt  test_basic.cpp
